2007-12-13  Ross Burton  <ross@openedhand.com>

	* applets/launcher/launcher.c:
	* applets/showdesktop/showdesktop.c:
	* applets/clock/clock.c:
	Clear freshly allocated structures just to be safe.

2007-12-13  Ross Burton  <ross@openedhand.com>

	* matchbox-panel/mb-panel.c:
	Fix stupid mistake in previous commit which removed an atom.

2007-11-28  Ross Burton  <ross@openedhand.com>

	* matchbox-panel/mb-panel.c:
	Intern the atoms in a single call instead of many calls.

2007-11-28  Ross Burton  <ross@openedhand.com>

	* matchbox-panel/mb-panel.c:
	Mark more strings for translation, include config.h, and fix
	indentation.

2007-11-28  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Fix typo.

2007-10-11  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Use AC_HELP_STRING, make the help output reflect reality, and fix
	building without libstartup-notification.

2007-08-08  Rob Bradford  <rob@openedhand.com>

	* applets/showdesktop/Makefile.am:
	* applets/startup/data/Makefile.am:
	* applets/windowselector/Makefile.am:
	Make sure various data files are included in the dist.

2007-07-22  Rob Bradford  <rob@openedhand.com>

	* applets/windowselector/windowselector.c:
	(mb_panel_applet_create):
	Fix coding style.

2007-07-13  Rob Bradford  <rob@openedhand.com>

	* applets/windowselector/windowselector.c: (update_current_app):
	Remove the use of gtk_image_clear since that is only available in 2.8
	and later.

2007-07-13  Rob Bradford  <rob@openedhand.com>

	* applets/windowselector/windowselector.c:
	(get_current_app_window), (update_current_app), (filter_func),
	(screen_changed_cb), (mb_panel_applet_create):
	Use the 'id' attribute for the windowselector to provide alternative
	display modes. Four modes are available:
	  'static-icon' which shows the same icon all the time, 
	  'dynamic-icon' which acts like the GNOME window selector with the icon 
	  changing based on the current app,