@@ -6,6 +6,10 @@ endif
 
 if HAVE_LIBSN
   SUBDIRS += startup
+if HAVE_LIBNOTIFY
+    SUBDIRS += startup-notify
 endif
+endif
+
 
 MAINTAINERCLEANFILES = Makefile.in
