@@ -1,3 +1,12 @@
+2008-01-17  Ross Burton  <ross@openedhand.com>
+
+	* configure.ac:
+	* applets/Makefile.am:
+	* applets/startup-notify/Makefile.am:
+	* applets/startup-notify/startup.c:
+	Add new startup notification applet which uses libnotify instead
+	of appearing in the panel.
+
 2007-12-13  Ross Burton  <ross@openedhand.com>
 
 	* applets/launcher/launcher.c:
